...
              ),
            ),
            const Gap(20),
            SizedBox(
              width: double.maxFinite,
              child: ElevatedButton(
                key: const Key('btn_add_new_task'),
                onPressed: () => context.push(RouteLocation.createTask),
                child: Padding(
                  padding: const EdgeInsets.all(8.0),
                  child: DisplayWhiteText(
                    text: S.of(context).addNewTask,
                  ),
...
